ssl configuration for kafka broker with client authentication

--- a/.env
+++ b/.env
@@ -10,3 +10,8 @@ ENCRYPTION_KEY='bf03fa59de43e4a1be8874308c4186e242d4a29ddefd1858'
 INITIALIZATION_VECTOR='1365d85eaee1155c609a1c226e78c8a9'
 
 # The tokens above are generated with the node:crypto module. Run crypto.randomBytes(64).toString('hex')
+
+KAFKA_BROKER='broker:9092'
+KAFKA_CLIENT_ID='a5cd3e119edf083a1fbd8c07a8fb29c3'
+KAFKA_TOPIC='my-topic'
+KAFKA_GROUP_ID="my-group"
